public/assets/css/style.css
/* ... */
.bg-footer::before {
    content: '';
    position: absolute;
    background-color: transparent;
    background-image: radial-gradient(at bottom center, var(--accent-color) 0%, var(--accent-transparent) 40%);
    opacity: 0.2;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 0;
}

/* ================== 16. Digital Process ================== */

.section-wrapper-digital-process {
    padding: 0px 30px 0px 30px;
}

.section-wrapper-digital-process .spacer {
    align-self: center;
    width: initial;
    height: 3px;
    background-color: transparent;
    background-image: radial-gradient(at center center, var(--accent-color-6) 0%, var(--accent-transparent) 70%);
}

.digital-process-banner {
    position: relative;
    background-color: transparent;
    background-image: radial-gradient(at top left, var(--accent-color-3) 0%, var(--secondary) 50%);
    overflow: hidden;
    border: 1px solid var(--accent-color-3);
    border-radius: var(--global-border-radius);
    padding: 120px 20px 120px 20px;
    z-index: 1;
}

body.lightmode .digital-process-banner {
    background-image: radial-gradient(at top left, var(--accent-color-4) 0%, var(--accent-color-4) 50%);
}

.digital-process-content {
    display: flex;
    flex-direction: column;
    position: relative;
    gap: 50px 50px;
    z-index: 2;
}

.digital-process-banner::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: transparent;
    background-image: radial-gradient(at bottom center, var(--accent-color) 0%, var(--accent-transparent) 40%);
    opacity: 0.2;
    z-index: 0;
}

.digital-process-steps-wrapper {
    display: flex;
    border-radius: var(--global-border-radius);
    padding: 2px 2px 0px 2px;
    overflow: hidden;
    position: relative;
    z-index: 1;
}

.digital-process-steps-wrapper::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: transparent;
    background-image: linear-gradient(180deg, var(--accent-color) 0%, var(--accent-transparent) 65%);
    opacity: 0.2;
    z-index: 0;
}

.digital-process-steps {
    background-color: var(--secondary);
    display: flex;
    flex-direction: row;
    gap: 30px 30px;
    overflow: hidden;
    border-radius: var(--global-border-radius);
    border: 1px solid var(--accent-color-3);
    padding: 30px 30px 30px 30px;
    overflow: hidden;
    position: relative;
    z-index: 2;
}

.digital-process-step {
    display: flex;
    flex-direction: column;
    gap: 50px 50px;
}

.step-spacer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    align-self: center;
    background-color: transparent;
    background-image: radial-gradient(at center center, var(--accent-color-6) 0%, var(--accent-transparent) 70%);
    width: 3px;
    height: 200px;
}

.process-icon {
    width: 20%;
}

.space-header {
    display: block;
    height: 150px;
}

/* ================== 17. Heading Components ================== */

/* 17.1 Title Heading */
.title-heading-banner {
    display: inline-block;
    -webkit-background-clip: text;
    background-color: transparent;
    background-image: linear-gradient(349deg, var(--accent-transparent) 30%, var(--primary) 100%);
    -webkit-text-fill-color: transparent;
    -webkit-tap-highlight-color: transparent;
    /* font-size: var(--font-size-15xl); */
    line-height: var(--line-height-snug);

}

.title-heading {
    display: inline-block;
    -webkit-background-clip: text;
    background-color: transparent;
    background-image: linear-gradient(329deg, var(--accent-transparent) 3%, var(--primary) 100%);
    -webkit-text-fill-color: transparent;
    -webkit-tap-highlight-color: transparent;
    padding-bottom: 10px;
}

body.lightmode .title-heading {
    background-image: linear-gradient(329deg, var(--primary) 100%, var(--primary) 100%);
}

.banner-heading {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.sub-heading {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 10px;
    align-items: center;
}

.sub-heading i {
    color: var(--accent-color);
    font-size: var(--font-size-xl);
}

.sub-heading span {
    font-size: var(--font-size-base);
    font-weight: var(--font-weight-light);
    line-height: var(--line-height-loose);
    letter-spacing: 1px;
    color: var(--primary);
}

/* 17.2 Navbar Action Component */

.navbar-action-container {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    gap: 0px 0px;
    align-items: center;
    width: 22%;
}

.navbar-action-button {
    display: flex;
    flex-direction: row;
    gap: 20px 20px;
    align-items: center;
    justify-content: flex-end;
    padding: 0px 20px 0px 20px;
}

.navbar-icon-wrapper {
    display: flex;
    flex-direction: row;
    gap: 0px 0px;
    align-items: center;
    flex-wrap: wrap;
    justify-content: space-between;
    flex-wrap: wrap;
    border-radius: 100px 100px 100px 100px;
    max-width: 100%;
    width: 270px;
    box-shadow: var(--box-shadow-top-left);
    height: auto;
    padding: 5px 5px 5px 5px;
    transition: all 0.6s;
}

.inner-service-button {
    width: 235px;
}

body.lightmode .navbar-icon-wrapper {
    border: 1px solid var(--accent-color);
}

.navbar-icon-wrapper:hover {
    box-shadow: var(--box-shadow-bottom-right);
}

.navbar-icon-wrapper h6 {
    margin-right: 1em;
}

/* 17.3 Testimonial Reviewer */

.testimonial-reviewer {
    display: flex;
    flex-direction: row;
    align-items: start;
    gap: 20px;
    justify-content: space-between;
    flex-wrap: wrap;
}

.testimonial-reviewer .avatar {
    width: 50px;
    height: auto;
}

/* 17.4 Avatar Container */

.avatar-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 50%;
}
/* ... */

